# kovre

./: .gitignore  Cargo.toml  ISSUES_LITHAIR.md  ISSUES_RUSTIC.md  README.md  init-phase-2.md  init-phase-3.md  init-phase-4.md  init-phase-5.md  init-phase-6.md  init.md  kovre.example.yaml  rust-toolchain.toml
.cargo/: config.toml
kovre/: Cargo.toml  build.rs
kovre-core/: Cargo.toml
kovre-core/src/: backup.rs  config.rs  dpapi.rs  lib.rs  ludusavi.rs
kovre-core/src/backup/: mirror.rs  mod.rs  rustic.rs
kovre-core/src/templates/: browser_profiles.rs  dev_repos.rs  documents.rs  mod.rs  steam_saves.rs  thunderbird_mail.rs  user_appdata.rs  user_files.rs
kovre-wasm/: Cargo.toml
kovre-wasm/src/: lib.rs
kovre/src/: cli.rs  main.rs
kovre/src/serve/: frontend.rs  mod.rs  models.rs  restore.rs  runs.rs  smb.rs  sync.rs
kovre/tests/: dashboard.rs  integration.rs
scripts/: clean-target.ps1
src/: backup.rs  cli.rs  config.rs  lib.rs  ludusavi.rs  main.rs
src/templates/: dev_repos.rs  mod.rs
tests/: integration.rs
web/: .gitignore  package-lock.json  package.json  svelte.config.js  vite.config.ts
web/src/: app.d.ts  app.html
web/src/lib/: DirInput.svelte  RepoForm.svelte  api.ts  format.ts  yaml.ts
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
web/src/routes/about/: +page.svelte
web/src/routes/jobs/: +page.svelte
web/src/routes/jobs/[name]/: +page.svelte
web/src/routes/jobs/[name]/edit/: +page.svelte
web/src/routes/jobs/[name]/restore/: +page.svelte
web/src/routes/repositories/: +page.svelte
web/src/routes/repositories/[name]/edit/: +page.svelte
web/src/routes/repositories/new/: +page.svelte
web/src/routes/runs/: +page.svelte
web/src/routes/snapshots/[job]/[id]/: +page.svelte
web/src/routes/templates/: +page.svelte
web/src/routes/templates/[name]/: +page.svelte
