[package]
name = "kovre"
version = "0.1.0"
edition = "2021"
description = "Backup orchestrator for Windows — declarative YAML, rustic_core engine"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.102"
clap = { version = "4", features = ["derive"] }
dirs = "6.0.0"
indexmap = { version = "2.14.0", features = ["serde"] }
reqwest = { version = "0.13.3", default-features = false, features = ["rustls", "http2"] }
rustic_backend = "0.6.1"
rustic_core = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
walkdir = "2.5.0"
winreg = "0.56.0"

[dev-dependencies]
tempfile = "3.27.0"
