[package]
name = "kovre-core"
version = "0.1.0"
edition = "2021"
description = "Core library for kovre — config parsing, rustic_core wrapper, templates, Ludusavi manifest"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
globset = "0.4.18"
indexmap = { version = "2.14.0", features = ["serde"] }
jiff = "0.2.24"
reqwest = { version = "0.13.3", default-features = false, features = ["rustls", "http2"] }
rustic_backend = "0.6.1"
rustic_core = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
walkdir = "2.5.0"
winreg = "0.56.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
] }

[dev-dependencies]
mockito = "1.7.0"
tempfile = "3.27.0"
