[package]
name = "kovre-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM data-layer logic for the kovre dashboard frontend (sort, filter, validate)"
license = "MIT OR Apache-2.0"
publish = false

[lib]
# `cdylib` produces the .wasm bundle consumed by the SvelteKit frontend.
# `rlib` lets us run the unit tests with `cargo test` against the host
# target without a JS runtime in scope.
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# wasm-bindgen + serde-wasm-bindgen are only meaningful when targeting
# wasm32; we leave them as unconditional deps to keep `cargo build` and
# `cargo test` simple on the native target. The `#[wasm_bindgen]` exports
# are themselves gated by `#[cfg(target_family = "wasm")]`.
wasm-bindgen = "0.2.120"
serde-wasm-bindgen = "0.6.5"

[lints.rust]
# `cdylib` triggers an "unused crate" warning for `wasm-bindgen` when we
# build native unit tests because `#[wasm_bindgen]` is cfg-gated off.
# Silencing this is preferable to a more invasive cfg gate on the dep.
unused_crate_dependencies = "allow"
