[package]
name = "kovre"
version = "0.1.0"
edition = "2021"
description = "Backup orchestrator for Windows — declarative YAML, rustic_core engine"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
clap = { version = "4", features = ["derive"] }
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["server"] }
jiff = "0.2.24"
kovre-core = { path = "../kovre-core" }
lithair-core = { version = "0.2.0", features = ["admin-ui"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[dev-dependencies]
indexmap = "2.14.0"
rustic_backend = "0.6.1"
rustic_core = "0.11.0"
tempfile = "3.27.0"
