[package]
name = "kovre"
version = "0.1.0"
edition = "2021"
description = "Backup orchestrator for Windows — declarative YAML, rustic_core engine"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.102"
arc-swap = "1.7.1"
atomicwrites = "0.4.4"
clap = { version = "4", features = ["derive"] }
getrandom = "0.2.16"
jiff = "0.2.24"
kovre-core = { path = "../kovre-core" }
lithair-core = { version = "0.6.0", features = ["admin-ui"] }
mime_guess = "2.0.5"
rust-embed = "8.7.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[dev-dependencies]
indexmap = "2.14.0"
rustic_backend = "0.6.1"
rustic_core = "0.11.0"
tempfile = "3.27.0"
ureq = { version = "2.12.1", features = ["json"] }
walkdir = "2.5.0"
